# miniSoft

./: .gitignore
HikTest/: CMakeLists.txt  动态库连接配置.txt
HikTest/src/: Hik.cpp  Hik.h  HikTest.cpp
RealSenseFilter/: CMakeLists.txt  main.cpp
ScreenSnap_ok/: CMakeLists.txt  main.cpp
opencvtest/src/: test.cpp
serialcom/testSerial/: main.cpp
serialcom/虚拟串口/: myProject  serial_com.cpp  虚拟端口说明.txt
tesseract/: CMakeLists.txt  main.cpp
vibe/: CMakeLists.txt
vibe/src/: main-opencv.cpp
